--- a/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
+++ b/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPAtXWcEz2OcWyfMJM7cOCH",
+      "authorship_tag": "ABX9TyPji+7uiIkuUgry5lzMYeoh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -480,11 +479,11 @@
         "spark.sql(query_h).collect()"
       ],
       "metadata": {
-        "id": "a0191Pd7KPAJ",
-        "outputId": "e5dc7dd0-ccfa-493a-f97d-7accb7568451",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "a0191Pd7KPAJ",
+        "outputId": "e5dc7dd0-ccfa-493a-f97d-7accb7568451"
       },
       "execution_count": 19,
       "outputs": [
@@ -664,11 +663,11 @@
         "ville.groupBy([\"sexe\"]).avg(\"salaire_float\").collect()"
       ],
       "metadata": {
-        "id": "IrQOvnjeQBaG",
-        "outputId": "588f43d3-c63d-4bb7-cc1f-f2558e31e838",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IrQOvnjeQBaG",
+        "outputId": "588f43d3-c63d-4bb7-cc1f-f2558e31e838"
       },
       "execution_count": 31,
       "outputs": [
@@ -752,11 +751,11 @@
         "ville.show(1)"
       ],
       "metadata": {
-        "id": "elsqqYlQSPQx",
-        "outputId": "05704775-efde-4abe-8207-3aa0bf97f01c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "elsqqYlQSPQx",
+        "outputId": "05704775-efde-4abe-8207-3aa0bf97f01c"
       },
       "execution_count": 35,
       "outputs": [
@@ -795,11 +794,11 @@
         "pop_par_tranche.orderBy(\"count\").show()"
       ],
       "metadata": {
-        "id": "zDLw5RuESPYO",
-        "outputId": "7ebc1ae1-0a50-4992-bbac-47c93f9b00d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zDLw5RuESPYO",
+        "outputId": "7ebc1ae1-0a50-4992-bbac-47c93f9b00d8"
       },
       "execution_count": 40,
       "outputs": [
@@ -843,11 +842,11 @@
         ")"
       ],
       "metadata": {
-        "id": "8JwX2jXlSPaW",
-        "outputId": "2a3c1286-20c2-4feb-ee38-dd4997100e63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8JwX2jXlSPaW",
+        "outputId": "2a3c1286-20c2-4feb-ee38-dd4997100e63"
       },
       "execution_count": 43,
       "outputs": [
@@ -903,11 +902,11 @@
         "ville.groupBy(\"sexe\").agg(func.size(func.collect_list('sexe'))).show()"
       ],
       "metadata": {
-        "id": "PYEkrhkfSPcg",
-        "outputId": "b97cb046-f0d8-46ce-d272-b3637ec1e148",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PYEkrhkfSPcg",
+        "outputId": "b97cb046-f0d8-46ce-d272-b3637ec1e148"
       },
       "execution_count": 45,
       "outputs": [
@@ -933,11 +932,11 @@
         "ville.groupBy(\"sexe\").agg(func.size(func.collect_set(\"salaire_categorie\"))).show()"
       ],
       "metadata": {
-        "id": "aQI3qd0bSPe3",
-        "outputId": "9385048c-e633-4fa7-b9e0-f0154035f134",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aQI3qd0bSPe3",
+        "outputId": "9385048c-e633-4fa7-b9e0-f0154035f134"
       },
       "execution_count": 47,
       "outputs": [
@@ -957,10 +956,512 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## **Spark DataFrame: creation, transformation, execution**"
+      ],
+      "metadata": {
+        "id": "f-A-liYaeN9s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### charger de la donnee : **spark.read**"
+      ],
+      "metadata": {
+        "id": "k13pz05egCq7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path_csv = \"/content/drive/MyDrive/Spark/projet_simul_velos_libre_service/data/Villes/ville_1.csv\"\n",
+        "df = spark.read.load(path_csv, format=\"csv\")"
+      ],
+      "metadata": {
+        "id": "6sU3kafOSPhX"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "HWzEH_ZlghYn",
+        "outputId": "141947ed-c541-44c0-9910-51acfe28086a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('_c0', 'string'),\n",
+              " ('_c1', 'string'),\n",
+              " ('_c2', 'string'),\n",
+              " ('_c3', 'string'),\n",
+              " ('_c4', 'string'),\n",
+              " ('_c5', 'string'),\n",
+              " ('_c6', 'string'),\n",
+              " ('_c7', 'string'),\n",
+              " ('_c8', 'string'),\n",
+              " ('_c9', 'string'),\n",
+              " ('_c10', 'string'),\n",
+              " ('_c11', 'string'),\n",
+              " ('_c12', 'string')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# l'option \"header\" permet de rajouter les noms des colonnes\n",
+        "\n",
+        "df = spark.read.format(\"csv\").options(header=True).load(path_csv)"
+      ],
+      "metadata": {
+        "id": "ij1cYBQMgha3"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "iPmh-Yyug1ee",
+        "outputId": "dddf4d21-969b-4be3-c73f-552edc959bea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('id', 'string'),\n",
+              " ('vitesse_a_pied', 'string'),\n",
+              " ('vitesse_a_velo', 'string'),\n",
+              " ('home', 'string'),\n",
+              " ('travail', 'string'),\n",
+              " ('sportif', 'string'),\n",
+              " ('casseur', 'string'),\n",
+              " ('statut', 'string'),\n",
+              " ('salaire', 'string'),\n",
+              " ('sexe', 'string'),\n",
+              " ('age', 'string'),\n",
+              " ('sportivite', 'string'),\n",
+              " ('velo_perf_minimale', 'string')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# l'option 'inferSchema' permet de transformer les colonnes en types plus precis\n",
+        "# si le fichier d'origine le permet\n",
+        "\n",
+        "df = spark.read.format(\"csv\").options(header=True, inferSchema=True).load(path_csv)"
+      ],
+      "metadata": {
+        "id": "lhuT4Nceg1hL"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.dtypes"
+      ],
+      "metadata": {
+        "id": "AdFcFFQ_g1km",
+        "outputId": "6226c7a6-535f-43d7-e625-df5554a1648b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('id', 'int'),\n",
+              " ('vitesse_a_pied', 'double'),\n",
+              " ('vitesse_a_velo', 'double'),\n",
+              " ('home', 'string'),\n",
+              " ('travail', 'string'),\n",
+              " ('sportif', 'boolean'),\n",
+              " ('casseur', 'boolean'),\n",
+              " ('statut', 'string'),\n",
+              " ('salaire', 'double'),\n",
+              " ('sexe', 'string'),\n",
+              " ('age', 'int'),\n",
+              " ('sportivite', 'double'),\n",
+              " ('velo_perf_minimale', 'double')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Avec **Spark**\n",
+        "- les Df sont potentiellement **distribués** sur le cluster d'ordinateur de maniere transparente pour le programmeur\n",
+        "- on peut utiliser le meme code pour un calcul sur un seul ordinateur que pour 1000 ordinateurs\n",
+        "- toute la logique de egstion du reseau, de distribution de calculs, de recuperation sur panneest geree par Spark de maniere autonome\n",
+        "- l'integraion de Spark avec Python permet en plus de faire des tests et de transformer les resulatst Spark en objets Python de maniete tout à fait transparente"
+      ],
+      "metadata": {
+        "id": "SB_YIHrliAGh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path_csv_cyclistes = \"/content/drive/MyDrive/Spark/projet_simul_velos_libre_service/data/Cyclistes/\"\n",
+        "df_cyclistes = spark.read.load(path_csv_cyclistes, format=\"csv\", header=True, inferSchema=\"True\")"
+      ],
+      "metadata": {
+        "id": "jQ32u_dkghdh"
+      },
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cyclistes.printSchema()"
+      ],
+      "metadata": {
+        "id": "gHsAESHfh8W6",
+        "outputId": "029266d6-0394-44d8-9066-f07138857a8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- id: integer (nullable = true)\n",
+            " |-- timestamp: timestamp (nullable = true)\n",
+            " |-- sur_velo: boolean (nullable = true)\n",
+            " |-- velo: string (nullable = true)\n",
+            " |-- vitesse: double (nullable = true)\n",
+            " |-- position: string (nullable = true)\n",
+            " |-- destination_finale: string (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cyclistes.count()"
+      ],
+      "metadata": {
+        "id": "Xc7CBN7tkrkV",
+        "outputId": "74564dd7-b5e9-4eee-f628-d35b188a6103",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4868396"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### transformer la donnee: **les transformations**"
+      ],
+      "metadata": {
+        "id": "5I8nvzJDlMcb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_cyclistes.agg({\"vitesse\":\"mean\"}).collect()"
+      ],
+      "metadata": {
+        "id": "TRAb5laZkrql",
+        "outputId": "612a93d7-bd07-4f56-c4b1-0a3e6fbb98f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(avg(vitesse)=0.5635749865179128)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6sU3kafOSPhX"
+        "id": "ysXKpapQh8cq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path_csv_villes = \"/content/drive/MyDrive/Spark/projet_simul_velos_libre_service/data/Villes/\"\n",
+        "df_villes = spark.read.load(path_csv_villes, format=\"csv\", header=True, inferSchema=\"True\")"
+      ],
+      "metadata": {
+        "id": "5BbwaU6Xh8e6"
+      },
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_villes.printSchema()"
+      ],
+      "metadata": {
+        "id": "EjcoRkS-h8hd",
+        "outputId": "11084388-0117-4030-b768-528a535591db",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "root\n",
+            " |-- id: integer (nullable = true)\n",
+            " |-- vitesse_a_pied: double (nullable = true)\n",
+            " |-- vitesse_a_velo: double (nullable = true)\n",
+            " |-- home: string (nullable = true)\n",
+            " |-- travail: string (nullable = true)\n",
+            " |-- sportif: boolean (nullable = true)\n",
+            " |-- casseur: boolean (nullable = true)\n",
+            " |-- statut: string (nullable = true)\n",
+            " |-- salaire: double (nullable = true)\n",
+            " |-- sexe: string (nullable = true)\n",
+            " |-- age: integer (nullable = true)\n",
+            " |-- sportivite: double (nullable = true)\n",
+            " |-- velo_perf_minimale: double (nullable = true)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_villes.count()"
+      ],
+      "metadata": {
+        "id": "2ANhP7Xvl-mQ",
+        "outputId": "76273a06-bb38-4087-d906-78063df67e00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1083"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\"}).collect()"
+      ],
+      "metadata": {
+        "id": "7IW3moE9mCtK",
+        "outputId": "02044ade-e941-463b-ed64-8126e3c4f908",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(sexe='F', avg(sportivite)=2.201847229112897),\n",
+              " Row(sexe='H', avg(sportivite)=2.161359149481709)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\"}).show()"
+      ],
+      "metadata": {
+        "id": "atTdEeLAmXdc",
+        "outputId": "82750b13-f88e-4d61-a799-cfd9736ba166",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----------------+\n",
+            "|sexe|  avg(sportivite)|\n",
+            "+----+-----------------+\n",
+            "|   F|2.201847229112897|\n",
+            "|   H|2.161359149481709|\n",
+            "+----+-----------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\", \"age\":\"max\"}).collect()"
+      ],
+      "metadata": {
+        "id": "rcGVnYwwmOZZ",
+        "outputId": "5a73eb99-8faa-4df9-f479-734b2a78f9f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Row(sexe='F', avg(sportivite)=2.201847229112897, max(age)=84),\n",
+              " Row(sexe='H', avg(sportivite)=2.161359149481709, max(age)=84)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\", \"age\":\"max\"}).show()"
+      ],
+      "metadata": {
+        "id": "AT9ipU8LmgUE",
+        "outputId": "927ebafd-9b0a-4090-907a-e589ac10309e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----------------+--------+\n",
+            "|sexe|  avg(sportivite)|max(age)|\n",
+            "+----+-----------------+--------+\n",
+            "|   F|2.201847229112897|      84|\n",
+            "|   H|2.161359149481709|      84|\n",
+            "+----+-----------------+--------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DiX7plJ7mOcF"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EswNdcX_mOet"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vbPgmizAmOhx"
       },
       "execution_count": null,
       "outputs": []
