--- a/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
+++ b/projet_simul_velos_libre_service/1_PySpark_chargement_manipulation_dataframe.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPji+7uiIkuUgry5lzMYeoh",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNSYqakMNRnfi8b8lXTYZVo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -275,7 +276,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### nb de lignes : fontion **count**"
+        "### nb de lignes : fonction **count**"
       ],
       "metadata": {
         "id": "45WH7O80YZjr"
@@ -991,11 +992,11 @@
         "df.dtypes"
       ],
       "metadata": {
-        "id": "HWzEH_ZlghYn",
-        "outputId": "141947ed-c541-44c0-9910-51acfe28086a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HWzEH_ZlghYn",
+        "outputId": "141947ed-c541-44c0-9910-51acfe28086a"
       },
       "execution_count": 49,
       "outputs": [
@@ -1042,11 +1043,11 @@
         "df.dtypes"
       ],
       "metadata": {
-        "id": "iPmh-Yyug1ee",
-        "outputId": "dddf4d21-969b-4be3-c73f-552edc959bea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iPmh-Yyug1ee",
+        "outputId": "dddf4d21-969b-4be3-c73f-552edc959bea"
       },
       "execution_count": 52,
       "outputs": [
@@ -1094,11 +1095,11 @@
         "df.dtypes"
       ],
       "metadata": {
-        "id": "AdFcFFQ_g1km",
-        "outputId": "6226c7a6-535f-43d7-e625-df5554a1648b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AdFcFFQ_g1km",
+        "outputId": "6226c7a6-535f-43d7-e625-df5554a1648b"
       },
       "execution_count": 54,
       "outputs": [
@@ -1157,11 +1158,11 @@
         "df_cyclistes.printSchema()"
       ],
       "metadata": {
-        "id": "gHsAESHfh8W6",
-        "outputId": "029266d6-0394-44d8-9066-f07138857a8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gHsAESHfh8W6",
+        "outputId": "029266d6-0394-44d8-9066-f07138857a8e"
       },
       "execution_count": 68,
       "outputs": [
@@ -1188,11 +1189,11 @@
         "df_cyclistes.count()"
       ],
       "metadata": {
-        "id": "Xc7CBN7tkrkV",
-        "outputId": "74564dd7-b5e9-4eee-f628-d35b188a6103",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xc7CBN7tkrkV",
+        "outputId": "74564dd7-b5e9-4eee-f628-d35b188a6103"
       },
       "execution_count": 69,
       "outputs": [
@@ -1223,11 +1224,11 @@
         "df_cyclistes.agg({\"vitesse\":\"mean\"}).collect()"
       ],
       "metadata": {
-        "id": "TRAb5laZkrql",
-        "outputId": "612a93d7-bd07-4f56-c4b1-0a3e6fbb98f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TRAb5laZkrql",
+        "outputId": "612a93d7-bd07-4f56-c4b1-0a3e6fbb98f6"
       },
       "execution_count": 70,
       "outputs": [
@@ -1270,11 +1271,11 @@
         "df_villes.printSchema()"
       ],
       "metadata": {
-        "id": "EjcoRkS-h8hd",
-        "outputId": "11084388-0117-4030-b768-528a535591db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EjcoRkS-h8hd",
+        "outputId": "11084388-0117-4030-b768-528a535591db"
       },
       "execution_count": 72,
       "outputs": [
@@ -1307,11 +1308,11 @@
         "df_villes.count()"
       ],
       "metadata": {
-        "id": "2ANhP7Xvl-mQ",
-        "outputId": "76273a06-bb38-4087-d906-78063df67e00",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2ANhP7Xvl-mQ",
+        "outputId": "76273a06-bb38-4087-d906-78063df67e00"
       },
       "execution_count": 73,
       "outputs": [
@@ -1333,11 +1334,11 @@
         "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\"}).collect()"
       ],
       "metadata": {
-        "id": "7IW3moE9mCtK",
-        "outputId": "02044ade-e941-463b-ed64-8126e3c4f908",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7IW3moE9mCtK",
+        "outputId": "02044ade-e941-463b-ed64-8126e3c4f908"
       },
       "execution_count": 76,
       "outputs": [
@@ -1360,11 +1361,11 @@
         "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\"}).show()"
       ],
       "metadata": {
-        "id": "atTdEeLAmXdc",
-        "outputId": "82750b13-f88e-4d61-a799-cfd9736ba166",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "atTdEeLAmXdc",
+        "outputId": "82750b13-f88e-4d61-a799-cfd9736ba166"
       },
       "execution_count": 77,
       "outputs": [
@@ -1389,11 +1390,11 @@
         "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\", \"age\":\"max\"}).collect()"
       ],
       "metadata": {
-        "id": "rcGVnYwwmOZZ",
-        "outputId": "5a73eb99-8faa-4df9-f479-734b2a78f9f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rcGVnYwwmOZZ",
+        "outputId": "5a73eb99-8faa-4df9-f479-734b2a78f9f2"
       },
       "execution_count": 78,
       "outputs": [
@@ -1416,11 +1417,11 @@
         "df_villes.groupBy(\"sexe\").agg({\"sportivite\":\"mean\", \"age\":\"max\"}).show()"
       ],
       "metadata": {
-        "id": "AT9ipU8LmgUE",
-        "outputId": "927ebafd-9b0a-4090-907a-e589ac10309e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AT9ipU8LmgUE",
+        "outputId": "927ebafd-9b0a-4090-907a-e589ac10309e"
       },
       "execution_count": 79,
       "outputs": [
